--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,43 @@
-aiofiles==22.1.0
-attrs==22.2.0
-certifi==2022.12.7
-cffi==1.15.1
-cfgrib==0.9.10.3
-charset-normalizer==2.1.1
-click==8.1.3
-contourpy==1.0.6
-cycler==0.11.0
-eccodes==1.5.0
-ecmwf-data==0.0.1
-ecmwf-opendata==0.1.1
-ecmwflibs==0.5.0
-findlibs==0.0.2
-fonttools==4.38.0
-httptools==0.5.0
-idna==3.4
-kiwisolver==1.4.4
-matplotlib==3.6.2
-metview==1.13.1
-multidict==6.0.4
-multiurl==0.1.1
-numpy==1.24.1
-packaging==22.0
-pandas==1.5.2
-Pillow==9.4.0
-pycparser==2.21
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytz==2022.7
-PyYAML==6.0
-requests==2.28.1
-sanic==22.12.0
-sanic-routing==22.8.0
-shapely==2.0.0
-six==1.16.0
-tqdm==4.64.1
-tzwhere==3.0.3
-ujson==5.6.0
-urllib3==1.26.13
-uvloop==0.17.0
-websockets==10.4
-xarray==2022.12.0
+aiofiles
+attrs
+certifi
+cffi
+cfgrib
+charset-normalizer
+click
+contourpy
+cycler
+eccodes
+ecmwf-data
+ecmwf-opendata
+ecmwflibs
+findlibs
+fonttools
+httptools
+idna
+kiwisolver
+matplotlib
+metview
+multidict
+multiurl
+numpy
+packaging
+pandas
+Pillow
+pycparser
+pyparsing
+python-dateutil
+pytz
+PyYAML
+requests
+sanic
+sanic-routing
+shapely
+six
+tqdm
+tzwhere
+ujson
+urllib3
+uvloop
+websockets
+xarray
